plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/MultipleOverrideLambda.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.Composable

class Impl : <!HIGHLIGHTING("severity='ERROR'; descr='[MIXING_FUNCTIONAL_KINDS_IN_SUPERTYPES]'")!>() -> Unit, @Composable (Int) -> Unit<!> {
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>@Composable override fun invoke()<!> {}
    @Composable override fun invoke(p0: Int) {}
}
